Automatically configure build different JDKs